--- a/roles/sys-mirror-acceleration/defaults/main.yaml
+++ b/roles/sys-mirror-acceleration/defaults/main.yaml
@@ -3,3 +3,4 @@
 use_official_security: true
 mirror: https://mirrors.aliyun.com
 pve_mirror: https://mirrors.tuna.tsinghua.edu.cn
+ct_mirror: "{{ pve_mirror }}/proxmox"
