--- a/requirements.yaml
+++ b/requirements.yaml
@@ -3,14 +3,14 @@ collections:
   - community.docker
 
 roles:
+  - name: geerlingguy.security
+  - name: bertvv.samba
   - name: geerlingguy.docker
   - name: grog.package
-  - name: geerlingguy.security
   - name: ironicbadger.docker_compose_generator
   - name: geerlingguy.nfs
   - name: ironicbadger.bash_aliases
   - name: geerlingguy.repo-epel
-  - name: geerlingguy.security
   - name: geerlingguy.docker
   - name: geerlingguy.ntp
   - name: chriswayg.msmtp-mailer
