--- a/main.yaml
+++ b/main.yaml
@@ -9,15 +9,17 @@
     - role: sys-mirror-acceleration
     - role: pve-remove-nag
     - role: geerlingguy.security
-      tags: ["security"]
+      tags: ['security']
     - role: pve-vgpu
-      tags: ["vgpu"]
+      tags: ['vgpu']
 
 - name: Setup penguin-logistics.
   hosts: penguin-logistics
   roles:
     - role: fs-mergerfs
-      tags: ["mergerfs"]
+      tags: ['mergerfs']
     - role: fs-mount
     - role: share-samba
-      tags: ["samba"]
+      tags: ['samba']
+    - role: geerlingguy.nfs
+      tags: ['nfs']
