--- a/main.yaml
+++ b/main.yaml
@@ -19,7 +19,7 @@
     - role: fs-mergerfs
       tags: ['mergerfs']
     - role: fs-mount
-    - role: share-samba
-      tags: ['samba']
-    - role: geerlingguy.nfs
-      tags: ['nfs']
+    # - role: share-samba
+    #   tags: ['samba']
+    # - role: geerlingguy.nfs
+    #   tags: ['nfs']
