--- a/group_vars/penguin-logistics.yaml
+++ b/group_vars/penguin-logistics.yaml
@@ -8,29 +8,38 @@ timezone: Asia/Shanghai
 samba_user: share
 
 #
+# grog.package
+#
+package_list:
+  - name: pv
+  - name: curl
+  - name: wget
+  - name: rsync
+
+#
 # filesystem-mergerfs
 #
 disks:
-  - diskbyuuid: /dev/disk/by-uuid/dd60bbf1-b826-4f20-9d32-4ca85d498b07
+  - path: /mnt/disk1
+    src: /dev/disk/by-uuid/dd60bbf1-b826-4f20-9d32-4ca85d498b07
     diskbyid: /dev/disk/by-id/ata-ST1000DM010-2EP102_Z9ADWTT5-part1 # 1T
-    path: /mnt/disk1
     fs: ext4
     opts: defaults
-  - diskbyuuid: /dev/disk/by-uuid/e6fed790-956a-4b54-ae35-8a37e4808a06
+  - path: /mnt/disk2
+    src: /dev/disk/by-uuid/e6fed790-956a-4b54-ae35-8a37e4808a06
     diskbyid: /dev/disk/by-id/ata-ST1000LM024_HN-M101MBB_S2SMJ9CD402134-part1 # 1T
-    path: /mnt/disk2
     fs: ext4
     opts: defaults
-  - diskbyuuid: /dev/disk/by-uuid/3b4eb2c8-0648-4d2a-b9e7-f4d5e2a0262b
+  - path: /mnt/disk3
+    src: /dev/disk/by-uuid/3b4eb2c8-0648-4d2a-b9e7-f4d5e2a0262b
     diskbyid: /dev/disk/by-id/ata-WUH721414ALE6L0_X1G0ZRWL-part1 # 12T
-    path: /mnt/disk3
     fs: ext4
     opts: defaults
 
 parity_disks:
-  - diskbyuuid: /dev/disk/by-uuid/fe145c2a-6b38-4370-a98b-e78cace78daf
+  - path: /mnt/parity1
+    src: /dev/disk/by-uuid/fe145c2a-6b38-4370-a98b-e78cace78daf
     diskbyid: /dev/disk/by-id/ata-HGST_HTS541010A9E680_170215JA104NZ406UM2V-part1 # 1T
-    path: /mnt/parity1
     fs: ext4
     opts: defaults
 
@@ -38,19 +47,19 @@ main_storage_path: /mnt/storage
 
 extra_mountpoints:
   - { path: "{{ main_storage_path }}" }
-  - { path: /mnt/aliyundrive, state: absent }
+  # - { path: /mnt/aliyundrive, state: absent }
 
 mergerfs_mountpoints:
-  - source: /mnt/disk*
-    mountpoint: /mnt/storage
+  - src: /mnt/disk*
+    path: /mnt/storage
     fs: fuse.mergerfs
     opts: defaults,nonempty,allow_other,use_ino,moveonenospc=true,category.create=epmfs,dropcacheonclose=true,minfreespace=100G,fsname=mergerfs
-    state: absent
-  - source: /mnt/disk*
-    mountpoint: /mnt/jbod
-    fs: fuse.mergerfs
-    opts: defaults,nonempty,allow_other,use_ino,moveonenospc=true,category.create=mspmfs,dropcacheonclose=true,minfreespace=100G,fsname=jbod
-    state: absent
+    state: mounted
+  # - source: /mnt/disk*
+  #   mountpoint: /mnt/jbod
+  #   fs: fuse.mergerfs
+  #   opts: defaults,nonempty,allow_other,use_ino,moveonenospc=true,category.create=mspmfs,dropcacheonclose=true,minfreespace=100G,fsname=jbod
+  #   state: absent
 
 # # ironicbadger.snapraid
 # snapraid_data_disks: '{{ disks }}'
@@ -59,27 +68,28 @@ mergerfs_mountpoints:
 #
 # Samba (bertvv.samba)
 #
-samba_server_string: '{{ hostname }}'
-samba_users:
-  - name: '{{ samba_user }}'
-    password: '{{ samba_passwd }}'
+# samba_server_string: '{{ hostname }}'
+# samba_users:
+#   - name: '{{ samba_user }}'
+#     password: '{{ samba_passwd }}'
 
-samba_global_include: global-include.conf
-samba_apple_extensions: 'no'
-samba_mitigate_cve_2017_7494: false
-samba_server_max_protocol: 'SMB3'
-samba_server_min_protocol: 'SMB1'
-samba_shares:
-  - { name: storage, comment: Storage on ark, path: /mnt/storage }
-  - { name: mediadata, comment: Storage on ark, path: /mnt/storage/mediadata }
-  - { name: photos, comment: Photos on ZFS mirror, path: /mnt/tank/fuse/photos }
-  # - { name: downloads, comment: Downloads, path: /mnt/tank/fuse/photos }
-  - { name: z_disk1, comment: disk1, path: /mnt/disk1 }
-  - { name: z_disk2, comment: disk2, path: /mnt/disk2 }
-  - { name: z_parity1, comment: parity1, path: /mnt/parity1 }
+# samba_global_include: global-include.conf
+# samba_apple_extensions: 'no'
+# samba_mitigate_cve_2017_7494: false
+# samba_server_max_protocol: 'SMB3'
+# samba_server_min_protocol: 'SMB1'
+# samba_shares:
+#   - { name: storage, comment: Storage on ark, path: /mnt/storage }
+#   - { name: mediadata, comment: Storage on ark, path: /mnt/storage/mediadata }
+#   - { name: photos, comment: Photos on ZFS mirror, path: /mnt/tank/fuse/photos }
+#   # - { name: downloads, comment: Downloads, path: /mnt/tank/fuse/photos }
+#   - { name: z_disk1, comment: disk1, path: /mnt/disk1 }
+#   - { name: z_disk2, comment: disk2, path: /mnt/disk2 }
+#   - { name: z_parity1, comment: parity1, path: /mnt/parity1 }
 
 #
 # NFS (geerlingguy.nfs)
 #
 nfs_exports:
-  - "/mnt/storage/mediadata    *(rw,sync,no_root_squash,fsid=25)"
+  - "/mnt/storage 192.168.123.0/24(rw,sync,no_root_squash,fsid=25)"
+  - "/mnt/disak3 192.168.123.0/24(rw,sync,no_root_squash,fsid=101)"
