--- a/requirements.yaml
+++ b/requirements.yaml
@@ -4,12 +4,11 @@ collections:
 
 roles:
   # - name: geerlingguy.security
-  # - name: geerlingguy.docker
   - name: grog.package
   # - name: ironicbadger.docker_compose_generator
   - name: geerlingguy.nfs
   # - name: ironicbadger.bash_aliases
   # - name: geerlingguy.repo-epel
-  # - name: geerlingguy.docker
+  - name: geerlingguy.docker
   # - name: geerlingguy.ntp
   # - name: chriswayg.msmtp-mailer
