--- a/group_vars/penguin-logistics.yaml
+++ b/group_vars/penguin-logistics.yaml
@@ -92,4 +92,5 @@ mergerfs_mountpoints:
 #
 nfs_exports:
   - "/mnt/storage 192.168.123.0/24(rw,sync,no_root_squash,fsid=25)"
+  - "/mnt/storage/appdata 192.168.123.0/24(rw,sync,no_root_squash,fsid=26)"
   - "/mnt/disak3 192.168.123.0/24(rw,sync,no_root_squash,fsid=101)"
