--- a/main.yaml
+++ b/main.yaml
@@ -26,3 +26,13 @@
     #   tags: ['samba']
     - role: geerlingguy.nfs
       tags: ['nfs']
+
+- name: Setup worker.
+  hosts: worker
+  vars:
+    # geerlingguy.docker
+    # docker_compose_version: "v2.17.3"
+    docker_daemon_options:
+      registry-mirrors: ["https://docker.mirrors.ustc.edu.cn/"]
+  roles:
+    # - role: geerlingguy.docker
